work on appendix

--- a/main.bib
+++ b/main.bib
@@ -805,18 +805,59 @@ url = "https://sebastianrisi.com/self_assembling_ai"
 
  @article{Mici_Parisi_Wermter_2018, title={A self-organizing neural network architecture for learning human-object interactions}, volume={307}, ISSN={09252312}, DOI={10.1016/j.neucom.2018.04.015}, journal={Neurocomputing}, author={Mici, Luiza and Parisi, German I. and Wermter, Stefan}, year={2018}, month={Sep}, pages={14–24}, language={en} }
 
+@online{LeCun_AMI,
+  author = {LeCun, Yann},
+  title = {A Path Towards Autonomous Machine Intelligence},
+  year = {2022},
+  url = {https://openreview.net/forum?id=BZ5a1r-kVsf},
+  urldate = {2022-09-21}
+}
+
+ @article{Keurti_Pan_Besserve_Grewe_Schölkopf_2022, title={Homomorphism Autoencoder -- Learning Group Structured Representations from Observed Transitions}, url={http://arxiv.org/abs/2207.12067}, abstractNote={How can we acquire world models that veridically represent the outside world both in terms of what is there and in terms of how our actions affect it? Can we acquire such models by interacting with the world, and can we state mathematical desiderata for their relationship with a hypothetical reality existing outside our heads? As machine learning is moving towards representations containing not just observational but also interventional knowledge, we study these problems using tools from representation learning and group theory. Under the assumption that our actuators act upon the world, we propose methods to learn internal representations of not just sensory information but also of actions that modify our sensory representations in a way that is consistent with the actions and transitions in the world. We use an autoencoder equipped with a group representation linearly acting on its latent space, trained on 2-step reconstruction such as to enforce a suitable homomorphism property on the group representation. Compared to existing work, our approach makes fewer assumptions on the group representation and on which transformations the agent can sample from the group. We motivate our method theoretically, and demonstrate empirically that it can learn the correct representation of the groups and the topology of the environment. We also compare its performance in trajectory prediction with previous methods.}, note={arXiv:2207.12067 [cs, math, stat]}, number={arXiv:2207.12067}, publisher={arXiv}, author={Keurti, Hamza and Pan, Hsiao-Ru and Besserve, Michel and Grewe, Benjamin F. and Schölkopf, Bernhard}, year={2022}, month={Jul} }
+
+ @article{Keller_Bonhoeffer_Hübener_2012, title={Sensorimotor Mismatch Signals in Primary Visual Cortex of the Behaving Mouse}, volume={74}, ISSN={08966273}, DOI={10.1016/j.neuron.2012.03.040}, number={5}, journal={Neuron}, author={Keller, Georg B. and Bonhoeffer, Tobias and Hübener, Mark}, year={2012}, month={Jun}, pages={809–815}, language={en} }
+
+ @article{Dosovitskiy_Beyer_Kolesnikov_Weissenborn_Zhai_Unterthiner_Dehghani_Minderer_Heigold_Gelly_2021, title={An Image is Worth 16x16 Words: Transformers for Image Recognition at Scale}, url={http://arxiv.org/abs/2010.11929}, abstractNote={While the Transformer architecture has become the de-facto standard for natural language processing tasks, its applications to computer vision remain limited. In vision, attention is either applied in conjunction with convolutional networks, or used to replace certain components of convolutional networks while keeping their overall structure in place. We show that this reliance on CNNs is not necessary and a pure transformer applied directly to sequences of image patches can perform very well on image classification tasks. When pre-trained on large amounts of data and transferred to multiple mid-sized or small image recognition benchmarks (ImageNet, CIFAR-100, VTAB, etc.), Vision Transformer (ViT) attains excellent results compared to state-of-the-art convolutional networks while requiring substantially fewer computational resources to train.}, note={arXiv:2010.11929 [cs]}, number={arXiv:2010.11929}, publisher={arXiv}, author={Dosovitskiy, Alexey and Beyer, Lucas and Kolesnikov, Alexander and Weissenborn, Dirk and Zhai, Xiaohua and Unterthiner, Thomas and Dehghani, Mostafa and Minderer, Matthias and Heigold, Georg and Gelly, Sylvain and Uszkoreit, Jakob and Houlsby, Neil}, year={2021}, month={Jun} }
 
 
 
+ @article{Sager_Salzmann_Burn_Stadelmann_2022, title={Unsupervised Domain Adaptation for Vertebrae Detection and Identification in 3D CT Volumes Using a Domain Sanity Loss}, volume={8}, rights={All rights reserved}, ISSN={2313-433X}, DOI={10.3390/jimaging8080222}, abstractNote={A variety of medical computer vision applications analyze 2D slices of computed tomography (CT) scans, whereas axial slices from the body trunk region are usually identified based on their relative position to the spine. A limitation of such systems is that either the correct slices must be extracted manually or labels of the vertebrae are required for each CT scan to develop an automated extraction system. In this paper, we propose an unsupervised domain adaptation (UDA) approach for vertebrae detection and identification based on a novel Domain Sanity Loss (DSL) function. With UDA the model’s knowledge learned on a publicly available (source) data set can be transferred to the target domain without using target labels, where the target domain is defined by the specific setup (CT modality, study protocols, applied pre- and processing) at the point of use (e.g., a specific clinic with its specific CT study protocols). With our approach, a model is trained on the source and target data set in parallel. The model optimizes a supervised loss for labeled samples from the source domain and the DSL loss function based on domain-specific “sanity checks” for samples from the unlabeled target domain. Without using labels from the target domain, we are able to identify vertebra centroids with an accuracy of 72.8%. By adding only ten target labels during training the accuracy increases to 89.2%, which is on par with the current state-of-the-art for full supervised learning, while using about 20 times less labels. Thus, our model can be used to extract 2D slices from 3D CT scans on arbitrary data sets fully automatically without requiring an extensive labeling effort, contributing to the clinical adoption of medical imaging by hospitals.}, number={8}, journal={Journal of Imaging}, author={Sager, Pascal and Salzmann, Sebastian and Burn, Felice and Stadelmann, Thilo}, year={2022}, month={Aug}, pages={222}, language={en} }
 
+ @article{Ronneberger_Fischer_Brox_2015, title={U-Net: Convolutional Networks for Biomedical Image Segmentation}, url={http://arxiv.org/abs/1505.04597}, abstractNote={There is large consent that successful training of deep networks requires many thousand annotated training samples. In this paper, we present a network and training strategy that relies on the strong use of data augmentation to use the available annotated samples more efficiently. The architecture consists of a contracting path to capture context and a symmetric expanding path that enables precise localization. We show that such a network can be trained end-to-end from very few images and outperforms the prior best method (a sliding-window convolutional network) on the ISBI challenge for segmentation of neuronal structures in electron microscopic stacks. Using the same network trained on transmitted light microscopy images (phase contrast and DIC) we won the ISBI cell tracking challenge 2015 in these categories by a large margin. Moreover, the network is fast. Segmentation of a 512x512 image takes less than a second on a recent GPU. The full implementation (based on Caffe) and the trained networks are available at http://lmb.informatik.uni-freiburg.de/people/ronneber/u-net .}, note={arXiv:1505.04597 [cs]}, number={arXiv:1505.04597}, publisher={arXiv}, author={Ronneberger, Olaf and Fischer, Philipp and Brox, Thomas}, year={2015}, month={May} }
 
+ @article{Jafari_Khouzani_Soltanian_Zadeh_2005, title={Radon transform orientation estimation for rotation invariant texture analysis}, volume={27}, ISSN={0162-8828, 2160-9292}, DOI={10.1109/TPAMI.2005.126}, number={6}, journal={IEEE Transactions on Pattern Analysis and Machine Intelligence}, author={Jafari-Khouzani, K. and Soltanian-Zadeh, H.}, year={2005}, month={Jun}, pages={1004–1008} }
 
+ @article{Ojala_Pietikainen_Maenpaa_2002, title={Multiresolution gray-scale and rotation invariant texture classification with local binary patterns}, volume={24}, ISSN={0162-8828}, DOI={10.1109/TPAMI.2002.1017623}, number={7}, journal={IEEE Transactions on Pattern Analysis and Machine Intelligence}, author={Ojala, T. and Pietikainen, M. and Maenpaa, T.}, year={2002}, month={Jul}, pages={971–987}, language={en} }
 
+ @article{Wen_RongWu_ShiehChungWei_1996, title={Rotation and gray-scale transform-invariant texture classification using spiral resampling, subband decomposition, and hidden Markov model}, volume={5}, ISSN={1057-7149, 1941-0042}, DOI={10.1109/83.536891}, number={10}, journal={IEEE Transactions on Image Processing}, author={Wen-Rong Wu and Shieh-Chung Wei}, year={1996}, month={Oct}, pages={1423–1434} }
 
+@inproceedings{greenspan1994rotation,
+  title={Rotation invariant texture recognition using a steerable pyramid},
+  author={Greenspan, Hayit and Belongie, S and Goodman, R\_ and Perona, Pietro},
+  booktitle={Proceedings of the 12th IAPR International Conference on Pattern Recognition, Vol. 3-Conference C: Signal Processing (Cat. No. 94CH3440-5)},
+  volume={2},
+  pages={162--167},
+  year={1994},
+  organization={IEEE}
+}
 
+ @inproceedings{Simard_Steinkraus_Platt_2003, address={Edinburgh, UK}, title={Best practices for convolutional neural networks applied to visual document analysis}, volume={1}, ISBN={978-0-7695-1960-9}, url={http://ieeexplore.ieee.org/document/1227801/}, DOI={10.1109/ICDAR.2003.1227801}, booktitle={Seventh International Conference on Document Analysis and Recognition, 2003. Proceedings.}, publisher={IEEE Comput. Soc}, author={Simard, P.Y. and Steinkraus, D. and Platt, J.C.}, year={2003}, pages={958–963} }
 
+ @inproceedings{Fasel_Gatica_Perez_2006, address={Hong Kong, China}, title={Rotation-Invariant Neoperceptron}, ISBN={978-0-7695-2521-1}, url={http://ieeexplore.ieee.org/document/1699534/}, DOI={10.1109/ICPR.2006.1020}, booktitle={18th International Conference on Pattern Recognition (ICPR’06)}, publisher={IEEE}, author={Fasel, B. and Gatica-Perez, D.}, year={2006}, pages={336–339} }
 
+ @article{Dieleman_DeFauw_Kavukcuoglu_2016, title={Exploiting Cyclic Symmetry in Convolutional Neural Networks}, url={http://arxiv.org/abs/1602.02660}, abstractNote={Many classes of images exhibit rotational symmetry. Convolutional neural networks are sometimes trained using data augmentation to exploit this, but they are still required to learn the rotation equivariance properties from the data. Encoding these properties into the network architecture, as we are already used to doing for translation equivariance by using convolutional layers, could result in a more efficient use of the parameter budget by relieving the model from learning them. We introduce four operations which can be inserted into neural network models as layers, and which can be combined to make these models partially equivariant to rotations. They also enable parameter sharing across different orientations. We evaluate the effect of these architectural modifications on three datasets which exhibit rotational symmetry and demonstrate improved performance with smaller models.}, note={arXiv:1602.02660 [cs]}, number={arXiv:1602.02660}, publisher={arXiv}, author={Dieleman, Sander and De Fauw, Jeffrey and Kavukcuoglu, Koray}, year={2016}, month={May} }
 
+ @article{Laptev_Savinov_Buhmann_Pollefeys_2016, title={TI-POOLING: transformation-invariant pooling for feature learning in Convolutional Neural Networks}, url={http://arxiv.org/abs/1604.06318}, abstractNote={In this paper we present a deep neural network topology that incorporates a simple to implement transformation invariant pooling operator (TI-POOLING). This operator is able to efficiently handle prior knowledge on nuisance variations in the data, such as rotation or scale changes. Most current methods usually make use of dataset augmentation to address this issue, but this requires larger number of model parameters and more training data, and results in significantly increased training time and larger chance of under- or overfitting. The main reason for these drawbacks is that the learned model needs to capture adequate features for all the possible transformations of the input. On the other hand, we formulate features in convolutional neural networks to be transformation-invariant. We achieve that using parallel siamese architectures for the considered transformation set and applying the TI-POOLING operator on their outputs before the fully-connected layers. We show that this topology internally finds the most optimal “canonical” instance of the input image for training and therefore limits the redundancy in learned features. This more efficient use of training data results in better performance on popular benchmark datasets with smaller number of parameters when comparing to standard convolutional neural networks with dataset augmentation and to other baselines.}, note={arXiv:1604.06318 [cs]}, number={arXiv:1604.06318}, publisher={arXiv}, author={Laptev, Dmitry and Savinov, Nikolay and Buhmann, Joachim M. and Pollefeys, Marc}, year={2016}, month={Sep} }
 
+ @inproceedings{Schmidt_Roth_2012, address={Providence, RI}, title={Learning rotation-aware features: From invariant priors to equivariant descriptors}, ISBN={978-1-4673-1228-8}, url={http://ieeexplore.ieee.org/document/6247909/}, DOI={10.1109/CVPR.2012.6247909}, booktitle={2012 IEEE Conference on Computer Vision and Pattern Recognition}, publisher={IEEE}, author={Schmidt, U. and Roth, S.}, year={2012}, month={Jun}, pages={2050–2057} }
 
+ @inbook{Kivinen_Williams_2011, address={Berlin, Heidelberg}, series={Lecture Notes in Computer Science}, title={Transformation Equivariant Boltzmann Machines}, volume={6791}, ISBN={978-3-642-21734-0}, url={http://link.springer.com/10.1007/978-3-642-21735-7_1}, DOI={10.1007/978-3-642-21735-7_1}, booktitle={Artificial Neural Networks and Machine Learning – ICANN 2011}, publisher={Springer Berlin Heidelberg}, author={Kivinen, Jyri J. and Williams, Christopher K. I.}, editor={Honkela, Timo and Duch, Włodzisław and Girolami, Mark and Kaski, Samuel}, year={2011}, pages={1–9}, collection={Lecture Notes in Computer Science} }
+
+ @article{Sohn_Lee_2012, title={Learning Invariant Representations with Local Transformations}, url={http://arxiv.org/abs/1206.6418}, abstractNote={Learning invariant representations is an important problem in machine learning and pattern recognition. In this paper, we present a novel framework of transformation-invariant feature learning by incorporating linear transformations into the feature learning algorithms. For example, we present the transformation-invariant restricted Boltzmann machine that compactly represents data by its weights and their transformations, which achieves invariance of the feature representation via probabilistic max pooling. In addition, we show that our transformation-invariant feature learning framework can also be extended to other unsupervised learning methods, such as autoencoders or sparse coding. We evaluate our method on several image classification benchmark datasets, such as MNIST variations, CIFAR-10, and STL-10, and show competitive or superior classification performance when compared to the state-of-the-art. Furthermore, our method achieves state-of-the-art performance on phone classification tasks with the TIMIT dataset, which demonstrates wide applicability of our proposed algorithms to other domains.}, note={arXiv:1206.6418 [cs, stat]}, number={arXiv:1206.6418}, publisher={arXiv}, author={Sohn, Kihyuk and Lee, Honglak}, year={2012}, month={Jun} }
+
+ @inproceedings{Lee_Grosse_Ranganath_Ng_2009, address={Montreal, Quebec, Canada}, title={Convolutional deep belief networks for scalable unsupervised learning of hierarchical representations}, ISBN={978-1-60558-516-1}, url={http://portal.acm.org/citation.cfm?doid=1553374.1553453}, DOI={10.1145/1553374.1553453}, booktitle={Proceedings of the 26th Annual International Conference on Machine Learning - ICML ’09}, publisher={ACM Press}, author={Lee, Honglak and Grosse, Roger and Ranganath, Rajesh and Ng, Andrew Y.}, year={2009}, pages={1–8}, language={en} }
+
+ @article{Teney_Hebert_2016, title={Learning to Extract Motion from Videos in Convolutional Neural Networks}, url={http://arxiv.org/abs/1601.07532}, abstractNote={This paper shows how to extract dense optical flow from videos with a convolutional neural network (CNN). The proposed model constitutes a potential building block for deeper architectures to allow using motion without resorting to an external algorithm, eg for recognition in videos. We derive our network architecture from signal processing principles to provide desired invariances to image contrast, phase and texture. We constrain weights within the network to enforce strict rotation invariance and substantially reduce the number of parameters to learn. We demonstrate end-to-end training on only 8 sequences of the Middlebury dataset, orders of magnitude less than competing CNN-based motion estimation methods, and obtain comparable performance to classical methods on the Middlebury benchmark. Importantly, our method outputs a distributed representation of motion that allows representing multiple, transparent motions, and dynamic textures. Our contributions on network design and rotation invariance offer insights nonspecific to motion estimation.}, note={arXiv:1601.07532 [cs]}, number={arXiv:1601.07532}, publisher={arXiv}, author={Teney, Damien and Hebert, Martial}, year={2016}, month={Jan} }
+
+ @article{Wu_Hu_Kong_2015, title={Flip-Rotate-Pooling Convolution and Split Dropout on Convolution Neural Networks for Image Classification}, url={http://arxiv.org/abs/1507.08754}, abstractNote={This paper presents a new version of Dropout called Split Dropout (sDropout) and rotational convolution techniques to improve CNNs’ performance on image classification. The widely used standard Dropout has advantage of preventing deep neural networks from overfitting by randomly dropping units during training. Our sDropout randomly splits the data into two subsets and keeps both rather than discards one subset. We also introduce two rotational convolution techniques, i.e. rotate-pooling convolution (RPC) and flip-rotate-pooling convolution (FRPC) to boost CNNs’ performance on the robustness for rotation transformation. These two techniques encode rotation invariance into the network without adding extra parameters. Experimental evaluations on ImageNet2012 classification task demonstrate that sDropout not only enhances the performance but also converges faster. Additionally, RPC and FRPC make CNNs more robust for rotation transformations. Overall, FRPC together with sDropout bring $1.18%$ (model of Zeiler and Fergus~cite{zeiler2013visualizing}, 10-view, top-1) accuracy increase in ImageNet 2012 classification task compared to the original network.}, note={arXiv:1507.08754 [cs]}, number={arXiv:1507.08754}, publisher={arXiv}, author={Wu, Fa and Hu, Peijun and Kong, Dexing}, year={2015}, month={Jul} }
 
