--- a/main.tex
+++ b/main.tex
@@ -115,6 +115,10 @@
 \chapter{Related Work}\chlbl{rel_work}
 \input{tex/related_work}
 
+\setchapterpreamble[u]{\margintoc}
+\chapter{Future Work}\chlbl{future_work}
+\input{tex/future_work}
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \appendix
 
