--- a/tex/preface.tex
+++ b/tex/preface.tex
@@ -8,25 +8,26 @@ It is always desirable to have an excellent outcome such as a system that can ex
 However, in my opinion, it is equally or even more important to reason why and how something works, to justify choices, and to show limitations.
 I wrote my Thesis with these thoughts in mind and hope that the readers are able to follow my reasoning.
 
-In the Introduction section, the work is motivated and in the subsequent chapter the fundamentals of Deep Learning and its limitations is described.
-Afterwards, it is motivated why methodologies inspired by neuroscience could overcome these limitations.
-This thesis aims at a target audience with a background in Deep Learning.
-Consequently, the concepts of Deep Learning are only roughly described.
-Since Neurocomputing may be rather unknown to the target audience, a more extensive overview about this field is given.
+... TODO ...
+%In the Introduction section, the work is motivated and in the subsequent chapter the fundamentals of Deep Learning and its limitations is described.
+%Afterwards, it is motivated why methodologies inspired by neuroscience could overcome these limitations.
+%This thesis aims at a target audience with a background in Deep Learning.
+%Consequently, the concepts of Deep Learning are only roughly described.
+%Since Neurocomputing may be rather unknown to the target audience, a more extensive overview about this field is given.
 
-I would like to thank a couple of colleagues and friends.
-First I think of my mentor Prof. Dr. Thilo Stadelmann who got me excited about AI years ago and later introduced me to research.
-He always encouraged creative ideas and helped to link different research areas to address problems with methodologies from other fields.
-Thanks to his support, help, and guidance, I have grown personally as well as professionally.
-Further thanks go to Dr. Jan Deriu. 
-Especially at the beginning of my thesis, he steered my thoughts in one direction.
-His unconventional thinking has led to the questioning of many methods that have stood the test of time for decades (this was also the inspiration for Geoffrey Hinton's quote on the page before, although I wouldn't presume to say that this thesis will change the future).
-To Prof. Dr. Christoph von der Malsburg for his seemingly endless patience in introducing me to neuroscience.
-He can build the bridge between the two diverging fields of Deep Learning and Neuroscience, inspires to think outside the box.
+%I would like to thank a couple of colleagues and friends.
+%First I think of my mentor Prof. Dr. Thilo Stadelmann who got me excited about AI years ago and later introduced me to research.
+%He always encouraged creative ideas and helped to link different research areas to address problems with methodologies from other fields.
+%Thanks to his support, help, and guidance, I have grown personally as well as professionally.
+%Further thanks go to Dr. Jan Deriu. 
+%Especially at the beginning of my thesis, he steered my thoughts in one direction.
+%His unconventional thinking has led to the questioning of many methods that have stood the test of time for decades (this was also the inspiration for Geoffrey Hinton's quote on the page before, although I wouldn't presume to say that this thesis will change the future).
+%To Prof. Dr. Christoph von der Malsburg for his seemingly endless patience in introducing me to neuroscience.
+%He can build the bridge between the two diverging fields of Deep Learning and Neuroscience, inspires to think outside the box.
 
-The biggest thanks, however, goes to my family, who made this journey possible for me.
-My parents, who supported and encouraged me in every way.
-My younger brother who inspired me to study.
-My wife and son, who have been understanding and supportive and have always been the perfect counterbalance to the daily routine of studying.
-Without the support of my family, I would never have been able to embark on this academic path.
+%The biggest thanks, however, goes to my family, who made this journey possible for me.
+%My parents, who supported and encouraged me in every way.
+%My younger brother who inspired me to study.
+%My wife and son, who have been understanding and supportive and have always been the perfect counterbalance to the daily routine of studying.
+%Without the support of my family, I would never have been able to embark on this academic path.
 \normalsize
